--- a/arch/arm/configs/msm8960-nex_defconfig
+++ b/arch/arm/configs/msm8960-nex_defconfig
@@ -3605,9 +3605,12 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
 # Qualcomm Atheros Prima WLAN module
 #
 CONFIG_PRIMA_WLAN=m
-CONFIG_PRIMA_WLAN_BTAMP=n
-CONFIG_PRIMA_WLAN_LFR=n
-CONFIG_PRIMA_OKC=n
+CONFIG_PRIMA_WLAN_BTAMP=y
+CONFIG_PRIMA_WLAN_LFR=y
+CONFIG_PRIMA_WLAN_OKC=y
+CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
+# CONFIG_QCOM_VOWIFI_11R is not set
+CONFIG_QCOM_TDLS=y
 
 #
 # ZTE FTM
@@ -3824,6 +3827,7 @@ CONFIG_NLS_ISO8859_1=y
 # CONFIG_NLS_KOI8_R is not set
 # CONFIG_NLS_KOI8_U is not set
 # CONFIG_NLS_UTF8 is not set
+# CONFIG_RESTRICT_ROOTFS_SLAVE is not set
 
 #
 # Kernel hacking
